--- a/stack.html
+++ b/stack.html
@@ -1,4 +1,4 @@
-</<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Implementación de una pila</title>
@@ -7,8 +7,8 @@
 <body>
   <h1>Listas con implementación de una pila</h1>
   Agrega un número: <br/>
-  <input type="text" id="num" value="" placeholder="Nº Entero" onfocus="cleanData ()" />
-  <button id="pushButton" onclick="pushNumber (document.getElementById ('num').value);">Añade número</button>
+  <input type="text" id="list" value="" placeholder="Nº Entero" onfocus="cleanData ()" />
+  <button id="pushButton" onclick="pushNumber (document.getElementById ('list').value);">Añade número</button>
   <button id="popButton" onclick="popNumber ();">Consume número</button>
 
   <br/><br/>
